# Rust-Messaging-Project

./: .gitignore  README.md
Documentation/: Rust Messenger.postman_collection.json
messaging-project/: Cargo.toml
messaging-project-server/: .env  Cargo.toml
messaging-project-server/src/: auth.rs  handlers.rs  main.rs  models.rs  routes.rs
messaging-project/src/: lib.rs  main.rs
sql/: create_database.sql  db_setup.txt  example_users.sql  remove_database.sql
