[package]
name = "messaging-project-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
dotenv = "0.15.0"
serde_json = "1.0.114"
jsonwebtoken = "=7.2"
chrono = "0.4"
